chore: initial code

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,3 +5,16 @@ description = "Magic the Gathering AI env"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = []
+
+[dependency-groups]
+dev = ["pytest>=8.0"]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/mtg_engine"]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
